CMAKE_MINIMUM_REQUIRED(VERSION 3.0)

PROJECT(ketcube-remote-terminal)

SET(CMAKE_CXX_STANDARD 14)

SET(KETCUBE_FW_ROOT "" CACHE FILEPATH "KETCube firmware repository root")
ADD_DEFINITIONS(-DDESKTOP_BUILD -D_CRT_SECURE_NO_WARNINGS)

INCLUDE_DIRECTORIES(${KETCUBE_FW_ROOT}/KETCube/core)
INCLUDE_DIRECTORIES(${KETCUBE_FW_ROOT}/Drivers/KETCube/core)
INCLUDE_DIRECTORIES(${KETCUBE_FW_ROOT}/Drivers/KETCube/modules)
INCLUDE_DIRECTORIES(${KETCUBE_FW_ROOT}/KETCube/modules/communication)
INCLUDE_DIRECTORIES(${KETCUBE_FW_ROOT}/KETCube/modules/sensing)
INCLUDE_DIRECTORIES(${KETCUBE_FW_ROOT}/Projects/inc)
INCLUDE_DIRECTORIES(${KETCUBE_FW_ROOT}/Projects/src)

ADD_SUBDIRECTORY(dep/paho/)
ADD_SUBDIRECTORY(dep/json11/)

INCLUDE_DIRECTORIES(dep/paho/src)
INCLUDE_DIRECTORIES(dep/json11/)

FILE(GLOB_RECURSE EXE_FILES src/*.cpp src/*.h src/*.c)
#LIST(APPEND EXE_FILES ${KETCUBE_FW_ROOT}/Projects/src/ketCube_cmdList.c)

ADD_EXECUTABLE(ketcube-remote-terminal ${EXE_FILES})

TARGET_LINK_LIBRARIES(ketcube-remote-terminal paho-mqtt3c json11)
